added contact and hobbies pages.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
     <body>
         <h1>Adam Wentz</h1>
-        <h2>adam.k.wentz@gmail.com | 904.236.0514</h2>
         <img height="400" src="./Assets/Images/me.jpg" alt="The handsome dev and and even more handsome Asian Elphant who was kind enough to take a photo with him.">
         <br>
-        <a href="https://linkedin.com/in/adam-wentz-93274b142">LinkedIn</a>
-        <a href="https://github.com/aTTom904">GitHub</a>
+        <a href="https://linkedin.com/in/adam-wentz-93274b142">LinkedIn</a> |
+        <a href="https://github.com/aTTom904">GitHub</a> |
+        <a href="./contact.html">Contact Me</a>
 
         <hr>
 
@@ -156,5 +156,9 @@
         <h3>Business Management</h3>
         <h4>Florida State College of Jacksonville</h4>
         <h5>Jacksonville, FL | October 2008 - April 2010</h5>
+
+        <br>
+
+        <p>If you'd like to know more about me, feel free to read up on my <a href="./hobbies.html">hobbies and personal life</a>.</p>
     </body>
 </html>
