--- a/hobbies.html
+++ b/hobbies.html
@@ -8,7 +8,7 @@
 <body>
     <h1>My Hobbies and Personal Life</h1>
     <p>
-        I live in Florida with my way-out-of-my-league wife and two children who's only deterrent to establishing a Lord-of-the-Flys-esque society is the lack of snacks as a result. I have two dogs and we're recently down to one fish. I've lived in Florida my whole life, but moved from Tampa to the Jacksonville area as a child, where I met my wife in High School.
+        I live in Florida with my way-out-of-my-league wife and two children who's only deterrent to establishing a Lord-of-the-Flies-esque society is the lack of snacks as a result. I have two dogs and we're recently down to one fish. I've lived in Florida my whole life, but moved from Tampa to the Jacksonville area as a child, where I met my wife in High School.
     </p>
     <p>
         My hobbies are pretty standard for a self-taught developer, especially a game developer. I like to play video games, and I like to develop. Even more than that, though, I like spending time and traveling with my family. We took a trip to my wife's homeland of Thailand late 2023 and it was magical.
@@ -18,7 +18,7 @@
     </p>
 
     <br>
-    
+
     <p>Here's a random shot of me in Koh Samui, Thailand</p>
     <img height="500" src="./Assets/Images/meinsamui.jpg" alt="The handsome dev standing atop a rock with is arms outstretched while waves from the ocean majestially crash against the the rock.">
 </body>
