Added footer on index.html

--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
         <h5>Jacksonville, FL | October 2008 - April 2010</h5>
 
         <br>
-
-        <p>If you'd like to know more about me, feel free to read up on my <a href="./hobbies.html">hobbies and personal life</a>.</p>
     </body>
+    <footer>
+        <p>© 2023 Adam Wentz</p>
+        <p><p>If you'd like to know more about me, feel free to read up on my <a href="./hobbies.html">hobbies and personal life</a>.</p></p>
+    </footer>
 </html>
